test/darwin/fail/write01.v3
//@execute = true
component write01 {
	def STDOUT: int = 1;
	def main() -> bool {
		var str = "The quick brown fox jumped over the lazy dog.";
		var buf = Pointer.atContents(str);
		var r = Darwin.write(STDOUT, buf, str.length);
		return r == str.length;
	}
}
